// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Topiclist matches snapshots using default properties. 1`] = `
<div
  className="rs-topic-list"
>
  <div>
    <div
      className="rs-topic-list-item"
    >
      <div
        onKeyPress={[Function]}
        role="button"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "margin": "auto",
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        tabIndex={0}
      />
      <label
        aria-label="checkbox"
        className="rs-check rs-radio"
        onKeyPress={[Function]}
        tabIndex={-1}
        title="checkbox"
      >
        <input
          checked={true}
          onChange={[Function]}
          onClick={[Function]}
          tabIndex={-1}
          type="radio"
        />
        <span />
      </label>
      <div
        className="rs-topic-list-toggle"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={-1}
      >
        <div>
          Topic 1
        </div>
        <div
          className="rs--topic-list-arrow rs-topic-list-arrow-expanded"
        />
      </div>
    </div>
    <div
      style={
        Object {
          "paddingLeft": "30px",
        }
      }
    >
      <div
        className="rs-layer-tree"
      >
        <div>
          <div
            className="rs-layer-tree-item rs-visible"
            style={
              Object {
                "paddingLeft": "0px",
              }
            }
          >
            <label
              aria-label="Hide layer"
              className="rs-layer-tree-input rs-layer-tree-input-radio rs-radio"
              onKeyPress={[Function]}
              tabIndex={0}
              title="Hide layer"
            >
              <input
                checked={true}
                onChange={[Function]}
                onClick={[Function]}
                tabIndex={-1}
                type="radio"
              />
              <span />
            </label>
            <div
              aria-label="Vector sample layers Hide sublayer"
              className="rs-layer-tree-toggle"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="button"
              tabIndex={0}
              title="Vector sample layers Hide sublayer"
            >
              <div>
                Vector sample layers
              </div>
              <div
                className="rs-layer-tree-arrow rs-layer-tree-arrow-expanded"
              />
            </div>
          </div>
          <div>
            <div
              className="rs-layer-tree-item "
              style={
                Object {
                  "paddingLeft": "30px",
                }
              }
            >
              <label
                aria-label="Show layer"
                className="rs-layer-tree-input rs-layer-tree-input-radio rs-radio"
                onKeyPress={[Function]}
                tabIndex={-1}
                title="Show layer"
              >
                <input
                  checked={false}
                  onChange={[Function]}
                  onClick={[Function]}
                  tabIndex={-1}
                  type="radio"
                />
                <span />
              </label>
              <div
                aria-label="Points Samples Show sublayer"
                className="rs-layer-tree-toggle"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex={0}
                title="Points Samples Show sublayer"
              >
                <div>
                  Points Samples
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              className="rs-layer-tree-item rs-visible"
              style={
                Object {
                  "paddingLeft": "30px",
                }
              }
            >
              <label
                aria-label="Hide layer"
                className="rs-layer-tree-input rs-layer-tree-input-radio rs-radio"
                onKeyPress={[Function]}
                tabIndex={-1}
                title="Hide layer"
              >
                <input
                  checked={true}
                  onChange={[Function]}
                  onClick={[Function]}
                  tabIndex={-1}
                  type="radio"
                />
                <span />
              </label>
              <div
                aria-label="Lines Samples Show sublayer"
                className="rs-layer-tree-toggle"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex={0}
                title="Lines Samples Show sublayer"
              >
                <div>
                  Lines Samples
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              className="rs-layer-tree-item "
              style={
                Object {
                  "paddingLeft": "30px",
                }
              }
            >
              <label
                aria-label="Show layer"
                className="rs-layer-tree-input rs-layer-tree-input-radio rs-radio"
                onKeyPress={[Function]}
                tabIndex={-1}
                title="Show layer"
              >
                <input
                  checked={false}
                  onChange={[Function]}
                  onClick={[Function]}
                  tabIndex={-1}
                  type="radio"
                />
                <span />
              </label>
              <div
                aria-label="Polygons Samples Show sublayer"
                className="rs-layer-tree-toggle"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex={0}
                title="Polygons Samples Show sublayer"
              >
                <div>
                  Polygons Samples
                </div>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            className="rs-layer-tree-item rs-visible"
            style={
              Object {
                "paddingLeft": "0px",
              }
            }
          >
            <label
              aria-label="Hide layer"
              className="rs-layer-tree-input rs-layer-tree-input-checkbox rs-checkbox"
              onKeyPress={[Function]}
              tabIndex={0}
              title="Hide layer"
            >
              <input
                checked={true}
                onChange={[Function]}
                onClick={[Function]}
                tabIndex={-1}
                type="checkbox"
              />
              <span />
            </label>
            <div
              aria-label="Other layers Hide sublayer"
              className="rs-layer-tree-toggle"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="button"
              tabIndex={0}
              title="Other layers Hide sublayer"
            >
              <div>
                Other layers
              </div>
              <div
                className="rs-layer-tree-arrow rs-layer-tree-arrow-expanded"
              />
            </div>
          </div>
          <div>
            <div
              className="rs-layer-tree-item "
              style={
                Object {
                  "paddingLeft": "30px",
                }
              }
            >
              <label
                aria-label="Show layer"
                className="rs-layer-tree-input rs-layer-tree-input-checkbox rs-checkbox"
                onKeyPress={[Function]}
                tabIndex={-1}
                title="Show layer"
              >
                <input
                  checked={false}
                  onChange={[Function]}
                  onClick={[Function]}
                  tabIndex={-1}
                  type="checkbox"
                />
                <span />
              </label>
              <div
                aria-label="Countries Borders Show sublayer"
                className="rs-layer-tree-toggle"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex={0}
                title="Countries Borders Show sublayer"
              >
                <div>
                  Countries Borders
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              className="rs-layer-tree-item rs-visible"
              style={
                Object {
                  "paddingLeft": "30px",
                }
              }
            >
              <label
                aria-label="Hide layer"
                className="rs-layer-tree-input rs-layer-tree-input-checkbox rs-checkbox"
                onKeyPress={[Function]}
                tabIndex={-1}
                title="Hide layer"
              >
                <input
                  checked={true}
                  onChange={[Function]}
                  onClick={[Function]}
                  tabIndex={-1}
                  type="checkbox"
                />
                <span />
              </label>
              <div
                aria-label="USA Population Density Show sublayer"
                className="rs-layer-tree-toggle"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex={0}
                title="USA Population Density Show sublayer"
              >
                <div>
                  USA Population Density
                </div>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            className="rs-layer-tree-item rs-visible"
            style={
              Object {
                "paddingLeft": "0px",
              }
            }
          >
            <label
              aria-label="Hide layer"
              className="rs-layer-tree-input rs-layer-tree-input-checkbox rs-checkbox"
              onKeyPress={[Function]}
              tabIndex={-1}
              title="Hide layer"
            >
              <input
                checked={true}
                onChange={[Function]}
                onClick={[Function]}
                tabIndex={-1}
                type="checkbox"
              />
              <span />
            </label>
            <div
              aria-label="OSM Baselayer Show sublayer"
              className="rs-layer-tree-toggle"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="button"
              tabIndex={0}
              title="OSM Baselayer Show sublayer"
            >
              <div>
                OSM Baselayer
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="rs-topic-list-item"
    >
      <div
        onKeyPress={[Function]}
        role="button"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "margin": "auto",
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        tabIndex={0}
      />
      <label
        aria-label="checkbox"
        className="rs-check rs-radio"
        onKeyPress={[Function]}
        tabIndex={-1}
        title="checkbox"
      >
        <input
          checked={false}
          onChange={[Function]}
          onClick={[Function]}
          tabIndex={-1}
          type="radio"
        />
        <span />
      </label>
      <div
        className="rs-topic-list-toggle"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={-1}
      >
        <div>
          Topic 2
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "paddingLeft": "30px",
        }
      }
    />
  </div>
</div>
`;

exports[`Topiclist matches snapshots when classNames are used. 1`] = `
<div
  className="mimi"
>
  <div>
    <div
      className="rs-topic-list-item"
    >
      <div
        onKeyPress={[Function]}
        role="button"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "margin": "auto",
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        tabIndex={0}
      />
      <label
        aria-label="checkbox"
        className="rs-check rs-radio"
        onKeyPress={[Function]}
        tabIndex={-1}
        title="checkbox"
      >
        <input
          checked={true}
          onChange={[Function]}
          onClick={[Function]}
          tabIndex={-1}
          type="radio"
        />
        <span />
      </label>
      <div
        className="rs-topic-list-toggle"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={-1}
      >
        <div>
          Topic 1
        </div>
        <div
          className="rs--topic-list-arrow rs-topic-list-arrow-expanded"
        />
      </div>
    </div>
    <div
      style={
        Object {
          "paddingLeft": "30px",
        }
      }
    >
      <div
        className="rs-layer-tree"
      >
        <div>
          <div
            className="rs-layer-tree-item rs-visible"
            style={
              Object {
                "paddingLeft": "0px",
              }
            }
          >
            <label
              aria-label="Hide layer"
              className="rs-layer-tree-input rs-layer-tree-input-radio rs-radio"
              onKeyPress={[Function]}
              tabIndex={0}
              title="Hide layer"
            >
              <input
                checked={true}
                onChange={[Function]}
                onClick={[Function]}
                tabIndex={-1}
                type="radio"
              />
              <span />
            </label>
            <div
              aria-label="Vector sample layers Hide sublayer"
              className="rs-layer-tree-toggle"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="button"
              tabIndex={0}
              title="Vector sample layers Hide sublayer"
            >
              <div>
                Vector sample layers
              </div>
              <div
                className="rs-layer-tree-arrow rs-layer-tree-arrow-expanded"
              />
            </div>
          </div>
          <div>
            <div
              className="rs-layer-tree-item "
              style={
                Object {
                  "paddingLeft": "30px",
                }
              }
            >
              <label
                aria-label="Show layer"
                className="rs-layer-tree-input rs-layer-tree-input-radio rs-radio"
                onKeyPress={[Function]}
                tabIndex={-1}
                title="Show layer"
              >
                <input
                  checked={false}
                  onChange={[Function]}
                  onClick={[Function]}
                  tabIndex={-1}
                  type="radio"
                />
                <span />
              </label>
              <div
                aria-label="Points Samples Show sublayer"
                className="rs-layer-tree-toggle"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex={0}
                title="Points Samples Show sublayer"
              >
                <div>
                  Points Samples
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              className="rs-layer-tree-item rs-visible"
              style={
                Object {
                  "paddingLeft": "30px",
                }
              }
            >
              <label
                aria-label="Hide layer"
                className="rs-layer-tree-input rs-layer-tree-input-radio rs-radio"
                onKeyPress={[Function]}
                tabIndex={-1}
                title="Hide layer"
              >
                <input
                  checked={true}
                  onChange={[Function]}
                  onClick={[Function]}
                  tabIndex={-1}
                  type="radio"
                />
                <span />
              </label>
              <div
                aria-label="Lines Samples Show sublayer"
                className="rs-layer-tree-toggle"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex={0}
                title="Lines Samples Show sublayer"
              >
                <div>
                  Lines Samples
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              className="rs-layer-tree-item "
              style={
                Object {
                  "paddingLeft": "30px",
                }
              }
            >
              <label
                aria-label="Show layer"
                className="rs-layer-tree-input rs-layer-tree-input-radio rs-radio"
                onKeyPress={[Function]}
                tabIndex={-1}
                title="Show layer"
              >
                <input
                  checked={false}
                  onChange={[Function]}
                  onClick={[Function]}
                  tabIndex={-1}
                  type="radio"
                />
                <span />
              </label>
              <div
                aria-label="Polygons Samples Show sublayer"
                className="rs-layer-tree-toggle"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex={0}
                title="Polygons Samples Show sublayer"
              >
                <div>
                  Polygons Samples
                </div>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            className="rs-layer-tree-item rs-visible"
            style={
              Object {
                "paddingLeft": "0px",
              }
            }
          >
            <label
              aria-label="Hide layer"
              className="rs-layer-tree-input rs-layer-tree-input-checkbox rs-checkbox"
              onKeyPress={[Function]}
              tabIndex={0}
              title="Hide layer"
            >
              <input
                checked={true}
                onChange={[Function]}
                onClick={[Function]}
                tabIndex={-1}
                type="checkbox"
              />
              <span />
            </label>
            <div
              aria-label="Other layers Hide sublayer"
              className="rs-layer-tree-toggle"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="button"
              tabIndex={0}
              title="Other layers Hide sublayer"
            >
              <div>
                Other layers
              </div>
              <div
                className="rs-layer-tree-arrow rs-layer-tree-arrow-expanded"
              />
            </div>
          </div>
          <div>
            <div
              className="rs-layer-tree-item "
              style={
                Object {
                  "paddingLeft": "30px",
                }
              }
            >
              <label
                aria-label="Show layer"
                className="rs-layer-tree-input rs-layer-tree-input-checkbox rs-checkbox"
                onKeyPress={[Function]}
                tabIndex={-1}
                title="Show layer"
              >
                <input
                  checked={false}
                  onChange={[Function]}
                  onClick={[Function]}
                  tabIndex={-1}
                  type="checkbox"
                />
                <span />
              </label>
              <div
                aria-label="Countries Borders Show sublayer"
                className="rs-layer-tree-toggle"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex={0}
                title="Countries Borders Show sublayer"
              >
                <div>
                  Countries Borders
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              className="rs-layer-tree-item rs-visible"
              style={
                Object {
                  "paddingLeft": "30px",
                }
              }
            >
              <label
                aria-label="Hide layer"
                className="rs-layer-tree-input rs-layer-tree-input-checkbox rs-checkbox"
                onKeyPress={[Function]}
                tabIndex={-1}
                title="Hide layer"
              >
                <input
                  checked={true}
                  onChange={[Function]}
                  onClick={[Function]}
                  tabIndex={-1}
                  type="checkbox"
                />
                <span />
              </label>
              <div
                aria-label="USA Population Density Show sublayer"
                className="rs-layer-tree-toggle"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex={0}
                title="USA Population Density Show sublayer"
              >
                <div>
                  USA Population Density
                </div>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            className="rs-layer-tree-item rs-visible"
            style={
              Object {
                "paddingLeft": "0px",
              }
            }
          >
            <label
              aria-label="Hide layer"
              className="rs-layer-tree-input rs-layer-tree-input-checkbox rs-checkbox"
              onKeyPress={[Function]}
              tabIndex={-1}
              title="Hide layer"
            >
              <input
                checked={true}
                onChange={[Function]}
                onClick={[Function]}
                tabIndex={-1}
                type="checkbox"
              />
              <span />
            </label>
            <div
              aria-label="OSM Baselayer Show sublayer"
              className="rs-layer-tree-toggle"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="button"
              tabIndex={0}
              title="OSM Baselayer Show sublayer"
            >
              <div>
                OSM Baselayer
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="rs-topic-list-item"
    >
      <div
        onKeyPress={[Function]}
        role="button"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "margin": "auto",
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        tabIndex={0}
      />
      <label
        aria-label="checkbox"
        className="rs-check rs-radio"
        onKeyPress={[Function]}
        tabIndex={-1}
        title="checkbox"
      >
        <input
          checked={false}
          onChange={[Function]}
          onClick={[Function]}
          tabIndex={-1}
          type="radio"
        />
        <span />
      </label>
      <div
        className="rs-topic-list-toggle"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={-1}
      >
        <div>
          Topic 2
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "paddingLeft": "30px",
        }
      }
    />
  </div>
</div>
`;

exports[`Topiclist matches snapshots when no layers. 1`] = `
<div
  className="rs-topic-list"
>
  <div>
    <div
      className="rs-topic-list-item"
    >
      <div
        onKeyPress={[Function]}
        role="button"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "margin": "auto",
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        tabIndex={0}
      />
      <label
        aria-label="checkbox"
        className="rs-check rs-radio"
        onKeyPress={[Function]}
        tabIndex={-1}
        title="checkbox"
      >
        <input
          checked={true}
          onChange={[Function]}
          onClick={[Function]}
          tabIndex={-1}
          type="radio"
        />
        <span />
      </label>
      <div
        className="rs-topic-list-toggle"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={-1}
      >
        <div>
          Topic 1
        </div>
        <div
          className="rs--topic-list-arrow rs-topic-list-arrow-expanded"
        />
      </div>
    </div>
    <div
      style={
        Object {
          "paddingLeft": "30px",
        }
      }
    >
      <div
        className="rs-layer-tree"
      />
    </div>
  </div>
  <div>
    <div
      className="rs-topic-list-item"
    >
      <div
        onKeyPress={[Function]}
        role="button"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "margin": "auto",
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        tabIndex={0}
      />
      <label
        aria-label="checkbox"
        className="rs-check rs-radio"
        onKeyPress={[Function]}
        tabIndex={-1}
        title="checkbox"
      >
        <input
          checked={false}
          onChange={[Function]}
          onClick={[Function]}
          tabIndex={-1}
          type="radio"
        />
        <span />
      </label>
      <div
        className="rs-topic-list-toggle"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={-1}
      >
        <div>
          Topic 2
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "paddingLeft": "30px",
        }
      }
    />
  </div>
</div>
`;
